--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Dorang landing page.">
+    <meta name="description" content="Kupuj zabawki, które ucieszą każdego!">
     <meta name="author" content="Devcrud">
     <title>OldToys - Strare zabawki w nowym stylu</title>
 
